[package]
name = "imagehash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
dialoguer = "0.11.0"
image = "0.24.7"
image_hasher = "1.2.0"
indicatif = {version="0.17.7",features=["rayon"]}
md5-rs = "0.1.5"
num_cpus = "1.16.0"
path-absolutize = "3.1.1"
rayon = "1.8.0"
serde_json = "1.0.107"
sha256 = "1.5.0"
